	  MIO183QT-9A LCD driver to support reading from the LCD.  From Toby
	  Duckworth (2014-4-16).
	* arch/arm/src/stm32/chip/stm32f20xxx_pinmap.h:  Correct a mapping for
	  SPI MOSI pin.  From dlsitzer (2014-4-26).
	* arm/src/sama5/sam_clockconfig.c and common/up_internal.h: Move the
	  un-definitions of __ramfuncs__ from the .c file to the .h file or,
	  otherwise, the attribute will be applied differently for the prototype
	  and the function definition.  Sourceforge patch 38 from Luciano Neri
	  (2014-4-17).
	* arch/arm/src/sama5/sam_emac.c:  Add missing right parentheses.  This
	  introduced in the above change and is Sourceforge patch 39 from Luciano
	  Neri (2014-4-17).
	* configs/sama5dx-ek/include/board.h and sama5d3-xplained.h:  These files
	  referenct type xcpt_t and so must include nuttx/irq.h.  This is
	  Sourceforge bug 25 submitted by Luciano Neri (2014-4-17).
	* arch/arm/src/stm32/stm32_otgfshost.c:  Some fixes related to low-speed
	  devices and interrupt endpoints from Leo (2014-4-17).
	* configs/stm32f4discovery/src/stm32_usb.c:  Add support to register
	  keyboard and mouse classes if so configured.  From Leo (2014-4-17).
	* include/nuttx/usb/usbhost:  Fix some USB HID-related conditional
	  compilation.  From Leo (2014-4-17).
	* drivers/usbhost/usbhost_hidmouse.c: Don't include NAKs from the device
	  in the error count.  From Leo (2014-4-17).
	* arch/arm/src/sam34/sam_irq.c:  Fix initialization of the default
	  priorities (2014-4-17).
	* arch/arm/src/kinetis/kinetis_irq.c, lpc17xx/lpc17_irq.c, and
	  tiva/tiva_irq.c:  Modify the logic to disables the interrupts and sets
	  the default interrupt priority so that it uses the ICTR to get the
	  number of interrupt lines/registers.  This is instead of using some
	  fixed number of initializations based a priori knowledge of the number
	  of interrupt lines in the MCU.  This logic is untested on some MCUs
	  on initial check-in0 (2014-4-17).